--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html><html lang=en>
 <head>
-<title>Extreme Asphalt Car Racing</title>
+<title>CarRacing Version4</title>
+<link rel='icon' href='images/RG.png'>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta name=description content="Are you ready to be the best racing pilot in the world? Right now, in order to burn the tires in unique and different ways, choose the car that suits you best and get on the wheel!
 Reveal your style by personalizing your car with different stickers, rims and colours!
@@ -28,7 +29,7 @@ Reveal your style by personalizing your car with different stickers, rims and co
   }</script><script type=application/ld+json>{
   "@context": "http://schema.org",
   "@type": "Game",
-  "name": "Extreme Asphalt Car Racing",
+  "name": "CarRacing Version4",
   "url": "https://html5.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e/",
   "image": "https://img.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e-512x512.jpeg",    
   "description": "Are you ready to be the best racing pilot in the world? Right now, in order to burn the tires in unique and different ways, choose the car that suits you best and get on the wheel!
@@ -39,11 +40,11 @@ Reveal your style by personalizing your car with different stickers, rims and co
 - Car - Development - Personalized and you earn your money.
 - Realistic physics for fun challenging experience.",
   "creator":{
-    "name":"Engin Yıldız"
+    "name":"Rishab Gautam"
     
     },
   "publisher":{
-    "name":"GameDistribution",
+    "name":"RishabStudios",
     "url":"https://gamedistribution.com/games/extreme-asphalt-car-racing"
     },
   "genre":[
