--- a/index.html
+++ b/index.html
@@ -1,178 +1,9 @@
-
-<!DOCTYPE html><html lang=en>
-<head>
-<title>CarRacing Version4</title>
-<link rel='icon' href='images/RG.png'>
-<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<meta name=description content="Are you ready to be the best racing pilot in the world? Right now, in order to burn the tires in unique and different ways, choose the car that suits you best and get on the wheel!
-Reveal your style by personalizing your car with different stickers, rims and colours!
-- Unusual visual effects and voiceover.
-- Developable and customizable vehicles.
-- Earn your money and buy special cars.
-- Car - Development - Personalized and you earn your money.
-- Realistic physics for fun challenging experience."><meta name=keywords content=drift,extreme,fast,nitro,race,real,simulation,simulator,furious,csr,best,#car,#speed,#3d,#drive,#dragon,ralli><meta property=og:type content=website><meta property=og:title content="Extreme Asphalt Car Racing"><meta property=og:description content="Are you ready to be the best racing pilot in the world? Right now, in order to burn the tires in unique and different ways, choose the car that suits you best and get on the wheel!
-Reveal your style by personalizing your car with different stickers, rims and colours!
-- Unusual visual effects and voiceover.
-- Developable and customizable vehicles.
-- Earn your money and buy special cars.
-- Car - Development - Personalized and you earn your money.
-- Realistic physics for fun challenging experience."><meta property=og:image content=https://img.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e-512x512.jpeg><meta property=og:url content=https://html5.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e/ ><link rel=canonical href=https://html5.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e/ ><link rel=manifest href=manifest_1.5.14.json><link rel=preconnect href=https://html5.api.gamedistribution.com><link rel=preconnect href=https://game.api.gamedistribution.com><link rel=preconnect href=https://pm.gamedistribution.com><script type=text/javascript>if ('serviceWorker' in navigator) {
-    navigator
-      .serviceWorker
-      .register(`/sw_1.5.14.js`)
-      .then(function () {
-        console.log('SW registered...');
-      })
-      .catch(err => {
-        console.log('SW not registered...', err.message);
-      });
-  }</script><script type=application/ld+json>{
-  "@context": "http://schema.org",
-  "@type": "Game",
-  "name": "CarRacing Version4",
-  "url": "https://html5.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e/",
-  "image": "https://img.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e-512x512.jpeg",    
-  "description": "Are you ready to be the best racing pilot in the world? Right now, in order to burn the tires in unique and different ways, choose the car that suits you best and get on the wheel!
-Reveal your style by personalizing your car with different stickers, rims and colours!
-- Unusual visual effects and voiceover.
-- Developable and customizable vehicles.
-- Earn your money and buy special cars.
-- Car - Development - Personalized and you earn your money.
-- Realistic physics for fun challenging experience.",
-  "creator":{
-    "name":"Rishab Gautam"
-    
-    },
-  "publisher":{
-    "name":"RishabStudios",
-    "url":"https://gamedistribution.com/games/extreme-asphalt-car-racing"
-    },
-  "genre":[
-      "drift",
-      "extreme",
-      "fast",
-      "nitro",
-      "race",
-      "real",
-      "simulation",
-      "simulator",
-      "furious",
-      "csr",
-      "best",
-      "#car",
-      "#speed",
-      "#3d",
-      "#drive",
-      "#dragon",
-      "ralli"
-  ]
-}</script><style>html{height:100%}body{margin:0;padding:0;background-color:#000;overflow:hidden;height:100%}#game{position:absolute;top:0;left:0;width:0;height:0;overflow:hidden;max-width:100%;max-height:100%;min-width:100%;min-height:100%;box-sizing:border-box}</style></head><body><iframe id=game frameborder=0 allow=autoplay allowfullscreen seamless scrolling=no></iframe><script type=text/javascript>(function () {
-    function GameLoader() {
-      this.init = function () {
-        this._gameId = "08cfc9d823674445ae8bb30e4164346e";
-        this._container = document.getElementById("game");
-        this._loader = this._getLoaderData();
-        this._hasImpression = false;
-        this._hasSuccess = false;
-        this._insertGameSDK();
-        this._softgamesDomains = this._getDomainData();
-      };
-
-      this._getLoaderData = function () {
-        return {"enabled":true,"sdk_version":"1.15.2"};
-      }
-
-      this._getDomainData = function(){
-        return [{"name":"minigame.aeriagames.jp","id":4217},{"name":"localhost:8080","id":4217},{"name":"minigame-stg.aeriagames.jp","id":4217}];
-      }
-
-      this._insertGameSDK = function () {
-        if (!this._gameId) return;
-
-        window["GD_OPTIONS"] = {
-          gameId: this._gameId,
-          loader: this._loader,
-          onLoaderEvent: this._onLoaderEvent.bind(this),
-          onEvent: this._onEvent.bind(this)
-        };
-
-        (function (d, s, id) {
-          var js,fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s);
-          js.id = id;
-          js.src = "https://html5.api.gamedistribution.com/main.min.js";
-          fjs.parentNode.insertBefore(js, fjs);
-        })(document, "script", "gamedistribution-jssdk");
-      };
-
-      this._loadGame = function (options) {
-
-        if (this._container_initialized) {
-          return;
-        }
-
-        var formatTokenURLSearch = this._bridge.exports.formatTokenURLSearch;
-        var extendUrlQuery = this._bridge.exports.extendUrlQuery;
-        var base64Encode = this._bridge.exports.base64Encode;
-        const ln_param = new URLSearchParams(window.location.search).get('lang');
-
-        var data = {
-          parentURL: this._bridge.parentURL,
-          parentDomain: this._bridge.parentDomain,
-          topDomain: this._bridge.topDomain,
-          hasImpression: options.hasImpression,
-          loaderEnabled: true,
-          host: window.location.hostname,
-          version: "1.5.14"
-        };
-
-        var searchPart = formatTokenURLSearch(data);
-        var gameSrc = "//html5.gamedistribution.com/rvvASMiM/08cfc9d823674445ae8bb30e4164346e/" + searchPart;
-        this._container.src = gameSrc;
-
-        this._container.onload = this._onFrameLoaded.bind(this);
-
-        this._container_initialized = true;
-      };
-
-      this._onLoaderEvent = function (event) {
-        switch (event.name) {
-          case "LOADER_DATA":
-            this._bridge = event.message.bridge;
-            this._game = event.message.game;
-            break;
-        }
-      };
-
-      this._onEvent = function (event) {
-        switch (event.name) {
-          case "SDK_GAME_START":
-            this._bridge && this._loadGame({hasImpression: this._hasImpression});
-            break;
-          case "AD_ERROR":
-          case "AD_SDK_CANCELED":
-            this._hasImpression = false || this._hasSuccess;
-            break;
-          case "ALL_ADS_COMPLETED":
-          case "COMPLETE":
-          case "USER_CLOSE":
-          case "SKIPPED":
-            this._hasImpression = true;
-            this._hasSuccess = true;
-            break;
-        }
-      };
-
-      this._onFrameLoaded=function(event){
-        var container=this._container;
-        setTimeout(function(){
-          try{
-            container.contentWindow.focus();
-          }catch(err){
-          }
-        },100);
-      }
-    }
-    new GameLoader().init();
-  })();</script></body></html>
+<div class="game-content">
+<div class="game-description">
+<div class="text-center game-name">
+<h1 id="h1" class="mt-0 p-1 fw-bolder d-inline-block">
+Car Stunt Driver </h1>
+</div> 
+<div id="game-playblock" class="game-playblock mb-3">
+<div id="game-object" class="game-object ratio ratio-16x9"><iframe src="https://html5.gamedistribution.com/08cfc9d823674445ae8bb30e4164346e/" frameborder="0" allowfullscreen="" scrolling="no"></iframe></div> 
+</div> </div></div>
