--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+<!DOCTYPE html> 
+<html>
+<head>
+  <title>CarRacing Version4</title>
+  <link rel='icon' href='images/RG.png'>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+</head> 
+
+<body> 
+
 <div class="game-content">
 <div class="game-description">
 <div class="text-center game-name">
 <h1 id="h1" class="mt-0 p-1 fw-bolder d-inline-block">
 Car Stunt Driver </h1>
-</div> 
+</div>
 <div id="game-playblock" class="game-playblock mb-3">
 <div id="game-object" class="game-object ratio ratio-20x20"><iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" frameborder="0" allowfullscreen="" scrolling="no"></iframe></div> 
 </div> </div></div>
+
+</body>
+</html>
