--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="game-description">
 <div class="text-center game-name">
 <h1 id="h1" class="mt-0 p-1 fw-bolder d-inline-block">
-CarRacing Version4 </h1>
+  <center> CarRacing Version4 <center> </h1>>
 </div>
 <div id="game-playblock" class="game-playblock mb-3">
 <div id="game-object" class="game-object ratio ratio-20x20"><iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" frameborder="0" allowfullscreen="" scrolling="no"></iframe></div> 
