--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <center> CarRacing Version4 <center> </h1>>
 </div>
 <div id="game-playblock" class="game-playblock mb-3">
-<div id="game-object" class="game-object ratio ratio-20x20"><iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" frameborder="0" allowfullscreen="" scrolling="no"></iframe></div> 
-</div> </div></div>
+<div id="game-object" class="game-object ratio ratio-20x20"><iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" width="640" height="360" frameborder="0" allowfullscreen="">
+</iframe>
+
+<div>
 
 </body>
 </html>
