--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> 
 
 <body> 
-<body>background="images/RG.png"
+<body background="images/RG.png">
 <div class="game-content">
 <div class="game-description">
 <div class="text-center game-name">
