--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <center> CarRacing Version4 <center> </h1>>
 </div>
 <div id="game-playblock" class="game-playblock mb-3">
-<div id="game-object" class="game-object ratio ratio-20x20"><iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" width="1024" height="600" frameborder="0" allowfullscreen="">
+<div id="game-object" class="game-object ratio ratio-20x20">
+<center> <iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" width="1024" height="600" frameborder="0" allowfullscreen=""> <center>
 </iframe>
 
 <div>
