--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
+
+
 <!DOCTYPE html> 
-<html>
-<head>
-  <title>CarRacing Version4</title>
-  <link rel='icon' href='images/RG.png'>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<html> 
+  
+<head> 
+    <title>full screen iframe</title> 
+    <link rel='icon' href='images/RG.png'>
+    <style type="text/css"> 
+        html { 
+            overflow: auto; 
+        } 
+          
+        html, 
+        body, 
+        div, 
+        iframe { 
+            margin: 0px; 
+            padding: 0px; 
+            height: 100%; 
+            border: none; 
+        } 
+          
+        iframe { 
+            display: block; 
+            width: 100%; 
+            border: none; 
+            overflow-y: auto; 
+            overflow-x: hidden; 
+        } 
+    </style> 
 </head> 
-
+  
 <body> 
-<body background="images/BG.png">
-<div class="game-content">
-<div class="game-description">
-<div class="text-center game-name">
-<h1 id="h1" class="mt-0 p-1 fw-bolder d-inline-block">
-  <center> CarRacing Version4 <center> </h1>>
-</div>
-<div id="game-playblock" class="game-playblock mb-3">
-<div id="game-object" class="game-object ratio ratio-20x20">
-<center> <iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/" width="1024" height="550" frameborder="0" allowfullscreen=""> <center>
-</iframe>
-
-<div>
-
-</body>
-</html>
+    <iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q"
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0" 
+            width="100%" 
+            height="100%" 
+            scrolling="auto"> 
+  </iframe> 
+  
+</body> 
+  
+</html> 
