--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html> 
   
 <head> 
-    <title>full screen iframe</title> 
+    <title>CarRacing Version 4</title> 
     <link rel='icon' href='images/RG.png'>
     <style type="text/css"> 
         html { 
