--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head> 
   
 <body> 
-    <iframe src="https://html5.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q"
+    <iframe src="https://cdn.gamemonetize.com/6stwp4ao05o39lbea0e39wqd9zlrkv1q/"
             frameborder="0" 
             marginheight="0" 
             marginwidth="0" 
